--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         .then(res => {
 
           $('#success').text('Thank you for subscribing!');
-          $('#success').fadeOut(3000)
+          $('#success').fadeOut(8000);  
           console.log(res);
         });
     });
