--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="row main-header-partners">
         <div class="col-md-12">
-          <img src="img/partners/stark_drones.png" alt="cnbs" class="brands w-100" />
+          <a href="https://www.starkdrones.org/" target="_blank"><img src="img/partners/stark_drones.png" alt="cnbs" class="brands w-100" /></a>
         </div>
       </div>
     </div>
@@ -114,7 +114,7 @@
         About <span> LNR</span>
       </h1>
       <div class="row">
-        <div class="col-md-7 about-left" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200">
+        <div class="col-md-7 about-left text-justify" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200">
           <article>
 
             <p>Lonero(LNR) is a newly emerging cryptocurrency that aims to be the future of digital cash. The
@@ -158,7 +158,7 @@
 
     <!-- mission -->
     <div class="container specification">
-      <h1 class="main-title" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200">
+      <h1 class="main-title" style="margin-top:20px;" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200">
         Mission
       </h1>
       <p data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200">
