--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         CIRCULATING SUPPLY<span> AND DISTRIBUTION</span>
       </h1>
       <div class="container about">
-        <canvas id="finace" width="100" height="30"></canvas>
+        <canvas id="finace"></canvas>
       </div>
     </div>
     <!-- finacial status -->
@@ -556,10 +556,10 @@
         <div class="col-md-3">
           <h5>Support</h5>
           <ul>
-            <li><a href="#">Log</a></li>
-            <li><a href="#contact">FAQ</a></li>
-            <li><a href="#">Reddit</a></li>
-            <li><a href="#">Glittter</a></li>
+            <li><a href="https://hackaday.io/project/171604-building-a-decentralized-internet/details">Log</a></li>
+            <li><a href="https://lonero-team.github.io/helpdesk/">FAQ</a></li>
+            <li><a href="https://reddit.com/u/lonerolnr">Reddit</a></li>
+            <li><a href="https://gitter.im/Decentralized-Internet/community?source=orgpage">Glittter</a></li>
           </ul>
         </div>
         <div class="col-md-3">
@@ -666,7 +666,8 @@
 
       // Configuration options go here
       options: {
-
+        responsive: true,
+        maintainAspectRatio: true,
       }
     });
   </script>
