--- a/index.html
+++ b/index.html
@@ -238,9 +238,7 @@
       <h1 class="main-title">
         CIRCULATING SUPPLY<span> AND DISTRIBUTION</span>
       </h1>
-      <div class="container about">
-        <canvas id="finace"></canvas>
-      </div>
+      <canvas id="finace" width="600" height="500"></canvas>
     </div>
     <!-- finacial status -->
   </section>
