--- a/index.html
+++ b/index.html
@@ -666,6 +666,9 @@
       options: {
         responsive: true,
         maintainAspectRatio: true,
+        legend: {
+        display: false
+    },
       }
     });
   </script>
