--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           data-aos-offset="200">
           <img src="img/walletplaceholder.png" class="wallet" class="lonero-wallet">
           <div class="overlay"></div>
-          <a href="github.com" target="_blank" class="btn btn-default main-but-md dowanload">Download</a>
+          <a href="https://github.com/" target="_blank" class="btn btn-default main-but-md dowanload">Download</a>
         </div>
       </div>
     </div>
@@ -586,7 +586,7 @@
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
   </script>
@@ -602,6 +602,7 @@
   <script src="js/readMoreJS.min.js"></script>
   <!-- chart js -->
   <script src="js/Chart.js"></script>
+  
   <!-- end chart js -->
   <!-- facebook pluging -->
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.3">
@@ -612,7 +613,7 @@
   <script src="js/ekko-lightbox.min.js"></script>
   <script src="js/ekko-lightbox.min.js.map"></script>
   <script src="https://unpkg.com/stein-js-client"></script>
-
+  
   <script>
     $('#subcribe').click(function () {
       var email = $('#email').val();
