--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
       <div class="row specification-list">
         <div class="col-md-6 specification-list-item">
           <a class="twitter-timeline" href="https://twitter.com/lonerolnr" data-tweet-limit="1">Tweets
-            by SinovateChain</a>
+            by Lonero</a>
         </div>
         <div class="col-md-6 specification-list-item">
           <iframe src="https://discord.com/widget?id=639489591664967700&amp;theme=dark" width="100%" height="268"
