--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             <li><a
                 href="https://lonero.readthedocs.io/en/latest/Decentralized%20Internet%20Docs/Critical%20Components.html">Guide</a>
             </li>
-            <li><a href="https://github.com/">Wallet</a></li>
+            <li><a href="https://github.com/Lonero-Team/Lonero-Wallet-2.0/releases">Wallet</a></li>
             <li><a href="https://leanpub.com/futurism/">LeanPub</a></li>
             <li><a
                 href="https://lonero.readthedocs.io/en/latest/LNR%20Next%20Generation%20Hardware/ChainBoard.html">ChainBoard</a>
