--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           data-aos-offset="200">
           <img src="img/walletplaceholder.png" class="wallet" class="lonero-wallet">
           <div class="overlay"></div>
-          <a href="https://github.com/" target="_blank" class="btn btn-default main-but-md dowanload">Download</a>
+          <a href="https://github.com/Lonero-Team/Lonero-Wallet-2.0/releases" target="_blank" class="btn btn-default main-but-md dowanload">Download</a>
         </div>
       </div>
     </div>
@@ -459,8 +459,7 @@
                 <span>Founder</span>
                 <div class="our-team-content-item-top-social-icons">
                   <a href="https://twitter.com/gamer456148" target="_blank"><i class="fab fa-twitter"></i></a>
-                  <a href="https://www.linkedin.com/in/gamer456148/" target="_blank"><i
-                      class="fab fa-linkedin-in"></i></a>
+                  <a href="https://www.linkedin.com/in/gamer456148/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
               </div>
             </div>
@@ -482,10 +481,8 @@
                 <span>Co-Founder
                 </span>
                 <div class="our-team-content-item-top-social-icons">
-                  <a href="#"><i class="fab fa-facebook-f" target="_blank"></i></a>
-                  <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                  <a href="#" target="_blank"><i class="fab fa-google-plus"></i></a>
-                  <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                  <a href="https://twitter.com/LukeYaldo" target="_blank"><i class="fab fa-twitter"></i></a>
+                  <a href="https://www.linkedin.com/in/luke-yaldo-253a02136/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
               </div>
             </div>
