--- a/index.html
+++ b/index.html
@@ -49,14 +49,10 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-        <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <a class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="pocp.html"> PoCP</a></li>
-            </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link scroll" href="#top">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link scroll" href="#about">About LNR</a>
@@ -74,6 +70,7 @@
             <a class="nav-link scroll" href="#contact">Contact</a>
           </li>
         </ul>
+
       </div>
     </div>
   </nav>
@@ -121,20 +118,17 @@
         <div class="col-md-7 about-left" data-aos="fade-up" data-aos-duration="2000" data-aos-offset="200">
           <article>
 
-            <p style="word-spacing: -1px;">Lonero(LNR) is a newly emerging cryptocurrency that aims to be the future of
-              digital cash. The
+            <p style="word-spacing: -1px;">Lonero(LNR) is a newly emerging cryptocurrency that aims to be the future of digital cash. The
               problem with current privacy coins, alt coins, and emerging cryptocurrencies relies mainly on stability,
               security, and an unknown future. We aim to fix many of these stability issues, be extremely
               decentralized, and have technology that actively supports the community.
 
-              <p style="word-spacing: -1px;">We are utilizing some of the most advanced technological protocols in order
-                to do so. This includes our
+              <p style="word-spacing: -1px;" >We are utilizing some of the most advanced technological protocols in order to do so. This includes our
                 consensus protocols that support less barriers amongst ASIC vs. Non-ASIC systems, along with the
                 Cryptonote foundation’s widely trusted ring signature protocols, multiple layers of security, and a
                 utilization of “Proof of Work” and “Proof of Space” mining. </p>
 
-              <p style="word-spacing: -1px;">Among the technology we are also integrating a Decentralized Autonomous
-                Organization or DAO,
+              <p style="word-spacing: -1px;">Among the technology we are also integrating a Decentralized Autonomous Organization or DAO,
                 bounty programs, and a mathematical proof that allows further decentralization. We believe that mining
                 rewards shouldn’t merely be limited to hardware specifications but also to total mathematical
                 knowledge, so we provide a fair market game to everyone involved.</p>
@@ -158,8 +152,7 @@
           data-aos-offset="200">
           <img src="img/walletplaceholder.png" class="wallet" class="lonero-wallet">
           <div class="overlay"></div>
-          <a href="https://github.com/Lonero-Team/Lonero-Wallet-2.0/releases" target="_blank"
-            class="btn btn-default main-but-md dowanload">Download</a>
+          <a href="https://github.com/Lonero-Team/Lonero-Wallet-2.0/releases" target="_blank" class="btn btn-default main-but-md dowanload">Download</a>
         </div>
       </div>
     </div>
@@ -466,8 +459,7 @@
                 <span>Founder</span>
                 <div class="our-team-content-item-top-social-icons">
                   <a href="https://twitter.com/gamer456148" target="_blank"><i class="fab fa-twitter"></i></a>
-                  <a href="https://www.linkedin.com/in/gamer456148/" target="_blank"><i
-                      class="fab fa-linkedin-in"></i></a>
+                  <a href="https://www.linkedin.com/in/gamer456148/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
               </div>
             </div>
@@ -490,8 +482,7 @@
                 </span>
                 <div class="our-team-content-item-top-social-icons">
                   <a href="https://twitter.com/LukeYaldo" target="_blank"><i class="fab fa-twitter"></i></a>
-                  <a href="https://www.linkedin.com/in/luke-yaldo-253a02136/" target="_blank"><i
-                      class="fab fa-linkedin-in"></i></a>
+                  <a href="https://www.linkedin.com/in/luke-yaldo-253a02136/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 </div>
               </div>
             </div>
@@ -592,7 +583,7 @@
   </script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
+  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
   </script>
@@ -608,7 +599,7 @@
   <script src="js/readMoreJS.min.js"></script>
   <!-- chart js -->
   <script src="js/Chart.js"></script>
-
+  
   <!-- end chart js -->
   <!-- facebook pluging -->
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.3">
@@ -619,7 +610,7 @@
   <script src="js/ekko-lightbox.min.js"></script>
   <script src="js/ekko-lightbox.min.js.map"></script>
   <script src="https://unpkg.com/stein-js-client"></script>
-
+  
   <script>
     $('#subcribe').click(function () {
       var email = $('#email').val();
@@ -662,7 +653,7 @@
       data: {
         labels: ["Founder", "Co-Founder", "Design & Marketing Team", "Content & Media Team", "Lonero Foundation",
           "Public Release"
-        ],
+],
         datasets: [{
           // label: 'CIRCULATING SUPPLY AND DISTRIBUTION',
           backgroundColor: '#00aeef',
