--- a/pocp.html
+++ b/pocp.html
@@ -163,7 +163,7 @@
                     <a href="https://www.instagram.com/bitcoinefficient/" target="_blank" class="btn btn-success btn-block btn-pocp">Instagram</a>
                 </div>
                 <div class="col-sm-12 col-md-3 col-lg-3">
-                    <a href="https://bitcointalk.org/index.php?action=profile;u=2252959" target="_blank" class="btn btn-success btn-block btn-pocp">BitcoinTalk</a>
+                    <a href="https://bitcointalk.org/index.php?topic=5331524" target="_blank" class="btn btn-success btn-block btn-pocp">BitcoinTalk</a>
                 </div>
             </div>
         </div>
